--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
         const duck = document.createElement("div");
         duck.className = "duck";
-        duck.innerText = "🦆 " + player;
+        duck.innerText = player + " 🦆";
         duck.style.left = "0px";
         duck.id = "duck" + i;
 
