--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Roll Hub</title>
+  <title>Foxseiz Roll Hub</title>
   <style>
     body { font-family: Arial, sans-serif; text-align: center; margin: 0; padding: 0; background: #f9fafb; }
     header { background: #111827; color: white; padding: 20px; }
@@ -14,10 +14,9 @@
     button.action { background: #2563eb; color: white; padding: 10px 20px; border: none; border-radius: 8px; margin: 10px; cursor: pointer; font-size: 16px; }
     .result { font-size: 24px; margin-top: 20px; }
     input { padding: 8px; width: 60%; border-radius: 6px; border: 1px solid #ccc; }
-    #raceTrack { margin-top: 20px; position: relative; width: 600px; margin-left: auto; margin-right: auto; border: 2px solid #ccc; background: #f3f4f6; }
-    .lane { position: relative; height: 50px; border-bottom: 1px dashed #ccc; display: flex; align-items: center; }
-    .playerName { width: 100px; text-align: left; margin-right: 10px; }
-    .duck { position: absolute; font-size: 28px; transition: left 0.1s linear; left: 0px; }
+    #raceTrack { margin-top: 20px; position: relative; width: 600px; margin-left: auto; margin-right: auto; border: 2px solid #ccc; background: #f3f4f6; height: auto; }
+    .duckContainer { position: absolute; display: flex; align-items: center; left: 0px; }
+    .duckContainer .duck { font-size: 28px; transform: scaleX(-1); margin-left: 5px; }
     .finish-line { position: absolute; right: 0; top: 0; height: 100%; width: 5px; background: red; }
     #coinContainer { margin-top:20px; font-size:50px; display:inline-block; }
     @keyframes spin { 0% { transform: rotateY(0deg); } 100% { transform: rotateY(720deg); } }
@@ -34,7 +33,6 @@
     </nav>
   </header>
 
-  <!-- Dice Section -->
   <section id="dice" class="active">
     <h2>Dice Roller 🎲</h2>
     <button class="action" onclick="rollDice(6)">Roll a d6</button>
@@ -45,7 +43,6 @@
     <div class="result" id="diceResult"></div>
   </section>
 
-  <!-- Coin Section -->
   <section id="coin">
     <h2>Coin Flip 🪙</h2>
     <button class="action" onclick="flipCoin()">Flip Coin</button>
@@ -53,7 +50,6 @@
     <div class="result" id="coinResult"></div>
   </section>
 
-  <!-- Duck Race Section -->
   <section id="duck">
     <h2>Duck Race 🦆</h2>
     <input id="names" placeholder="Enter names separated by commas">
@@ -124,22 +120,22 @@
       raceTrack.appendChild(finishLine);
 
       players.forEach((player, i) => {
-        const lane = document.createElement("div");
-        lane.className = "lane";
+        const container = document.createElement("div");
+        container.className = "duckContainer";
+        container.id = "duckContainer" + i;
+        container.style.top = `${i * laneHeight}px`;
+        container.style.left = "0px";
 
         const name = document.createElement("div");
-        name.className = "playerName";
         name.innerText = player;
 
         const duck = document.createElement("div");
         duck.className = "duck";
         duck.innerText = "🦆";
-        duck.id = "duck" + i;
-        duck.style.left = "0px";
 
-        lane.appendChild(name);
-        lane.appendChild(duck);
-        raceTrack.appendChild(lane);
+        container.appendChild(name);
+        container.appendChild(duck);
+        raceTrack.appendChild(container);
       });
 
       const baseSpeed = (trackWidth - finishLineWidth - 40) / (duration * 30);
@@ -152,13 +148,12 @@
         let raceFinished = false;
 
         players.forEach((_, i) => {
-          const duck = document.getElementById("duck" + i);
-          let currentLeft = parseFloat(duck.style.left) || 0;
+          const container = document.getElementById("duckContainer" + i);
+          let currentLeft = parseFloat(container.style.left) || 0;
 
-          // Random twist each tick to allow catching up or falling behind
           const twist = (Math.random() - 0.5) * 5;
           const newLeft = Math.min(currentLeft + baseSpeed * speeds[i] + twist, trackWidth - finishLineWidth - 40);
-          duck.style.left = newLeft + "px";
+          container.style.left = newLeft + "px";
 
           if (newLeft >= trackWidth - finishLineWidth - 40 && !raceFinished) {
             raceFinished = true;
@@ -172,8 +167,8 @@
           let maxLeft = 0;
           let winnerIndex = 0;
           players.forEach((_, i) => {
-            const duck = document.getElementById("duck" + i);
-            const left = parseFloat(duck.style.left);
+            const container = document.getElementById("duckContainer" + i);
+            const left = parseFloat(container.style.left);
             if (left > maxLeft) { maxLeft = left; winnerIndex = i; }
           });
           document.getElementById("duckResult").innerText = "🏆 Winner is: " + players[winnerIndex] + "!";
