--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
       document.getElementById(tab).classList.add('active');
       document.getElementById(tab + 'Tab').classList.add('active');
     }
-
+  
     function rollDice(sides) {
       const roll = Math.floor(Math.random() * sides) + 1;
       document.getElementById("diceResult").innerText = `You rolled: ${roll}`;
     }
-
+  
     function rollCustomDice() {
       const sides = parseInt(document.getElementById("customSides").value);
       if (isNaN(sides) || sides < 2) {
@@ -101,88 +101,140 @@
       }
       rollDice(sides);
     }
-
+  
     function flipCoin() {
       const coinContainer = document.getElementById("coinContainer");
       const coinResult = document.getElementById("coinResult");
       coinResult.innerText = "";
       coinContainer.classList.add("spin");
-
+  
       setTimeout(() => {
         coinContainer.classList.remove("spin");
         const flip = Math.random() < 0.5 ? "Heads" : "Tails";
         coinResult.innerText = `Coin landed on: ${flip}`;
-        coinContainer.innerText = flip === "Heads" ? "🪙" : "🪙";
+        coinContainer.innerText = "🪙";
       }, 2000);
     }
-
-    function startTimedDuckRace() {
+  
+    // 🎨 Random colors for player names only
+    const duckColors = ["#f87171", "#facc15", "#34d399", "#60a5fa", "#a78bfa", "#fb923c", "#f472b6", "#4ade80"];
+  
+    function getRandomColor() {
+      return duckColors[Math.floor(Math.random() * duckColors.length)];
+    }
+  
+    // 🦆 Live preview of ducks when names change
+    function updateDuckPreview() {
       const input = document.getElementById("names").value;
       const players = input.split(",").map(p => p.trim()).filter(Boolean);
-      const duration = parseFloat(document.getElementById("raceDuration").value);
-
-      if (players.length < 2 || isNaN(duration) || duration <= 0) {
-        document.getElementById("duckResult").innerText = "Add at least 2 names and valid duration!";
-        return;
-      }
-
       const raceTrack = document.getElementById("raceTrack");
       raceTrack.innerHTML = "";
-      document.getElementById("duckResult").innerText = "";
-
-      const trackWidth = 600;
-      const finishLineWidth = 5;
-      const laneHeight = 50;
-
+  
+      if (players.length === 0) return;
+  
       const finishLine = document.createElement("div");
       finishLine.className = "finish-line";
       raceTrack.appendChild(finishLine);
-
-      players.forEach((player, i) => {
+  
+      players.forEach((player) => {
         const lane = document.createElement("div");
         lane.className = "lane";
-
+  
         const container = document.createElement("div");
         container.className = "duckContainer";
-        container.id = "duckContainer" + i;
         container.style.left = "0px";
-
+  
         const name = document.createElement("div");
         name.innerText = player;
-
+        name.style.fontWeight = "bold";
+        name.style.color = getRandomColor();
+  
         const duck = document.createElement("div");
         duck.className = "duck";
         duck.innerText = "🦆";
-
+  
         container.appendChild(name);
         container.appendChild(duck);
         lane.appendChild(container);
         raceTrack.appendChild(lane);
       });
-
+    }
+  
+    document.getElementById("names").addEventListener("input", updateDuckPreview);
+  
+    // 🏁 Race logic
+    function startTimedDuckRace() {
+      const input = document.getElementById("names").value;
+      const players = input.split(",").map(p => p.trim()).filter(Boolean);
+      const duration = parseFloat(document.getElementById("raceDuration").value);
+  
+      if (players.length < 2 || isNaN(duration) || duration <= 0) {
+        document.getElementById("duckResult").innerText = "Add at least 2 names and valid duration!";
+        return;
+      }
+  
+      const raceTrack = document.getElementById("raceTrack");
+      raceTrack.innerHTML = "";
+      document.getElementById("duckResult").innerText = "";
+  
+      const trackWidth = 600;
+      const finishLineWidth = 5;
+  
+      const finishLine = document.createElement("div");
+      finishLine.className = "finish-line";
+      raceTrack.appendChild(finishLine);
+  
+      const duckStyles = players.map(() => ({
+        color: getRandomColor()
+      }));
+  
+      players.forEach((player, i) => {
+        const lane = document.createElement("div");
+        lane.className = "lane";
+  
+        const container = document.createElement("div");
+        container.className = "duckContainer";
+        container.id = "duckContainer" + i;
+        container.style.left = "0px";
+  
+        const name = document.createElement("div");
+        name.innerText = player;
+        name.style.fontWeight = "bold";
+        name.style.color = duckStyles[i].color;
+  
+        const duck = document.createElement("div");
+        duck.className = "duck";
+        duck.innerText = "🦆";
+  
+        container.appendChild(name);
+        container.appendChild(duck);
+        lane.appendChild(container);
+        raceTrack.appendChild(lane);
+      });
+  
       const baseSpeed = (trackWidth - finishLineWidth - 40) / (duration * 30);
       const speeds = players.map(() => 0.8 + Math.random() * 0.4);
-
+  
       let tickCount = 0;
       const totalTicks = duration * 30;
-
+  
       const raceInterval = setInterval(() => {
         let raceFinished = false;
-
+  
         players.forEach((_, i) => {
           const container = document.getElementById("duckContainer" + i);
           let currentLeft = parseFloat(container.style.left) || 0;
           const twist = (Math.random() - 0.5) * 5;
           const newLeft = Math.min(currentLeft + baseSpeed * speeds[i] + twist, trackWidth - finishLineWidth - 40);
           container.style.left = newLeft + "px";
-
+  
           if (newLeft >= trackWidth - finishLineWidth - 40 && !raceFinished) {
             raceFinished = true;
             clearInterval(raceInterval);
             document.getElementById("duckResult").innerText = "🏆 Winner is: " + players[i] + "!";
           }
         });
-
+  
         tickCount++;
         if (tickCount >= totalTicks && !raceFinished) {
           let maxLeft = 0;
@@ -195,7 +247,7 @@
           document.getElementById("duckResult").innerText = "🏆 Winner is: " + players[winnerIndex] + "!";
           clearInterval(raceInterval);
         }
-      }, 1000/30);
+      }, 1000 / 30);
     }
   </script>
 </body>
