--- a/index.html
+++ b/index.html
@@ -14,30 +14,60 @@
     button.action { background: #2563eb; color: white; padding: 10px 20px; border: none; border-radius: 8px; margin: 10px; cursor: pointer; font-size: 16px; }
     .result { font-size: 24px; margin-top: 20px; }
     input { padding: 8px; width: 60%; border-radius: 6px; border: 1px solid #ccc; }
-    #raceTrack { margin-top: 20px; position: relative; width: 600px; margin-left: auto; margin-right: auto; border: 2px solid #ccc; background: #f3f4f6; height: auto; }
 
-    .lane { position: relative; height: 50px; border-bottom: 1px dashed #ccc; }
+    /* Duck Race Styles */
+    #raceTrack {
+      margin-top: 20px;
+      position: relative;
+      width: 600px;
+      margin-left: auto;
+      margin-right: auto;
+      border: 2px solid #ccc;
+      background: #f3f4f6;
+      height: auto;
+    }
+
+    .lane {
+      position: relative;
+      height: 50px;
+      border-bottom: 1px dashed #ccc;
+      overflow: visible; /* allows names to overflow left side */
+    }
 
     .duckContainer {
       position: absolute;
       display: flex;
       align-items: center;
+      justify-content: flex-end;
+      gap: 8px;
       left: 0px;
       top: 50%;
       transform: translateY(-50%);
-      transition: left 0.1s linear; /* smooth movement */
+      transition: left 0.1s linear; /* smoother movement */
     }
 
     .duckContainer .duck {
       font-size: 28px;
-      transform: scaleX(-1);
-      margin-left: 5px;
+      transform: scaleX(-1); /* facing right */
+      animation: swim 1s ease-in-out infinite alternate;
     }
 
-    .finish-line { position: absolute; right: 0; top: 0; height: 100%; width: 5px; background: red; }
+    @keyframes swim {
+      0% { transform: translateY(0px) scaleX(-1); }
+      100% { transform: translateY(-3px) scaleX(-1); }
+    }
 
-    #coinContainer { margin-top:20px; font-size:50px; display:inline-block; }
+    .finish-line {
+      position: absolute;
+      right: 0;
+      top: 0;
+      height: 100%;
+      width: 5px;
+      background: red;
+    }
 
+    /* Coin Flip */
+    #coinContainer { margin-top: 20px; font-size: 50px; display: inline-block; }
     @keyframes spin { 0% { transform: rotateY(0deg); } 100% { transform: rotateY(720deg); } }
     .spin { animation: spin 2s linear; }
   </style>
@@ -52,6 +82,7 @@
     </nav>
   </header>
 
+  <!-- Dice Roller -->
   <section id="dice" class="active">
     <h2>Dice Roller 🎲</h2>
     <button class="action" onclick="rollDice(6)">Roll a d6</button>
@@ -62,6 +93,7 @@
     <div class="result" id="diceResult"></div>
   </section>
 
+  <!-- Coin Flip -->
   <section id="coin">
     <h2>Coin Flip 🪙</h2>
     <button class="action" onclick="flipCoin()">Flip Coin</button>
@@ -69,6 +101,7 @@
     <div class="result" id="coinResult"></div>
   </section>
 
+  <!-- Duck Race -->
   <section id="duck">
     <h2>Duck Race 🦆</h2>
     <input id="names" placeholder="Enter names separated by commas">
@@ -81,18 +114,20 @@
   </section>
 
   <script>
+    // --- Navigation ---
     function showTab(tab) {
       document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
       document.querySelectorAll('nav button').forEach(btn => btn.classList.remove('active'));
       document.getElementById(tab).classList.add('active');
       document.getElementById(tab + 'Tab').classList.add('active');
     }
-  
+
+    // --- Dice Roller ---
     function rollDice(sides) {
       const roll = Math.floor(Math.random() * sides) + 1;
       document.getElementById("diceResult").innerText = `You rolled: ${roll}`;
     }
-  
+
     function rollCustomDice() {
       const sides = parseInt(document.getElementById("customSides").value);
       if (isNaN(sides) || sides < 2) {
@@ -101,140 +136,98 @@
       }
       rollDice(sides);
     }
-  
+
+    // --- Coin Flip ---
     function flipCoin() {
       const coinContainer = document.getElementById("coinContainer");
       const coinResult = document.getElementById("coinResult");
       coinResult.innerText = "";
       coinContainer.classList.add("spin");
-  
+
       setTimeout(() => {
         coinContainer.classList.remove("spin");
         const flip = Math.random() < 0.5 ? "Heads" : "Tails";
         coinResult.innerText = `Coin landed on: ${flip}`;
-        coinContainer.innerText = "🪙";
       }, 2000);
     }
-  
-    // 🎨 Random colors for player names only
-    const duckColors = ["#f87171", "#facc15", "#34d399", "#60a5fa", "#a78bfa", "#fb923c", "#f472b6", "#4ade80"];
-  
-    function getRandomColor() {
-      return duckColors[Math.floor(Math.random() * duckColors.length)];
-    }
-  
-    // 🦆 Live preview of ducks when names change
-    function updateDuckPreview() {
-      const input = document.getElementById("names").value;
-      const players = input.split(",").map(p => p.trim()).filter(Boolean);
-      const raceTrack = document.getElementById("raceTrack");
-      raceTrack.innerHTML = "";
-  
-      if (players.length === 0) return;
-  
-      const finishLine = document.createElement("div");
-      finishLine.className = "finish-line";
-      raceTrack.appendChild(finishLine);
-  
-      players.forEach((player) => {
-        const lane = document.createElement("div");
-        lane.className = "lane";
-  
-        const container = document.createElement("div");
-        container.className = "duckContainer";
-        container.style.left = "0px";
-  
-        const name = document.createElement("div");
-        name.innerText = player;
-        name.style.fontWeight = "bold";
-        name.style.color = getRandomColor();
-  
-        const duck = document.createElement("div");
-        duck.className = "duck";
-        duck.innerText = "🦆";
-  
-        container.appendChild(name);
-        container.appendChild(duck);
-        lane.appendChild(container);
-        raceTrack.appendChild(lane);
-      });
-    }
-  
-    document.getElementById("names").addEventListener("input", updateDuckPreview);
-  
-    // 🏁 Race logic
+
+    // --- Duck Race ---
     function startTimedDuckRace() {
       const input = document.getElementById("names").value;
       const players = input.split(",").map(p => p.trim()).filter(Boolean);
       const duration = parseFloat(document.getElementById("raceDuration").value);
-  
+
       if (players.length < 2 || isNaN(duration) || duration <= 0) {
         document.getElementById("duckResult").innerText = "Add at least 2 names and valid duration!";
         return;
       }
-  
+
       const raceTrack = document.getElementById("raceTrack");
       raceTrack.innerHTML = "";
       document.getElementById("duckResult").innerText = "";
-  
+
       const trackWidth = 600;
       const finishLineWidth = 5;
-  
+      const laneHeight = 50;
+
       const finishLine = document.createElement("div");
       finishLine.className = "finish-line";
       raceTrack.appendChild(finishLine);
-  
-      const duckStyles = players.map(() => ({
-        color: getRandomColor()
-      }));
-  
+
+      const playerColors = players.map(() => `hsl(${Math.random() * 360}, 70%, 50%)`);
+
+      // Create lanes and ducks
       players.forEach((player, i) => {
         const lane = document.createElement("div");
         lane.className = "lane";
-  
+
         const container = document.createElement("div");
         container.className = "duckContainer";
         container.id = "duckContainer" + i;
         container.style.left = "0px";
-  
-        const name = document.createElement("div");
-        name.innerText = player;
-        name.style.fontWeight = "bold";
-        name.style.color = duckStyles[i].color;
-  
+
         const duck = document.createElement("div");
         duck.className = "duck";
         duck.innerText = "🦆";
-  
-        container.appendChild(name);
+
+        const name = document.createElement("div");
+        name.innerText = player;
+        name.style.color = playerColors[i];
+        name.style.fontWeight = "bold";
+        name.style.whiteSpace = "nowrap";
+        name.style.position = "absolute";
+        name.style.right = "40px"; // places name slightly behind duck
+        name.style.transform = "translateY(-50%)";
+
         container.appendChild(duck);
+        container.appendChild(name);
         lane.appendChild(container);
         raceTrack.appendChild(lane);
       });
-  
+
       const baseSpeed = (trackWidth - finishLineWidth - 40) / (duration * 30);
       const speeds = players.map(() => 0.8 + Math.random() * 0.4);
-  
+
       let tickCount = 0;
       const totalTicks = duration * 30;
-  
+
       const raceInterval = setInterval(() => {
         let raceFinished = false;
-  
+
         players.forEach((_, i) => {
           const container = document.getElementById("duckContainer" + i);
           let currentLeft = parseFloat(container.style.left) || 0;
-          const twist = (Math.random() - 0.5) * 5;
+          const twist = (Math.random() - 0.5) * 3;
           const newLeft = Math.min(currentLeft + baseSpeed * speeds[i] + twist, trackWidth - finishLineWidth - 40);
           container.style.left = newLeft + "px";
-  
+
           if (newLeft >= trackWidth - finishLineWidth - 40 && !raceFinished) {
             raceFinished = true;
             clearInterval(raceInterval);
             document.getElementById("duckResult").innerText = "🏆 Winner is: " + players[i] + "!";
           }
         });
-  
+
         tickCount++;
         if (tickCount >= totalTicks && !raceFinished) {
           let maxLeft = 0;
