--- a/index.html
+++ b/index.html
@@ -15,15 +15,14 @@
   .result { font-size: 24px; margin-top: 20px; }
   input { padding: 8px; width: 60%; border-radius: 6px; border: 1px solid #ccc; }
 
-  /* Duck Race Styles */
-  #raceTrack { margin-top: 20px; position: relative; width: 600px; margin-left: auto; margin-right: auto; border: 2px solid #ccc; background: #f3f4f6; height: auto; }
+  /* Duck Race */
+  #raceTrack { margin: 20px auto; width: 600px; border: 2px solid #ccc; background: #f3f4f6; min-height: 120px; position: relative; }
   .lane { position: relative; height: 50px; border-bottom: 1px dashed #ccc; overflow: visible; }
-  .duckContainer { position: absolute; display: flex; align-items: center; gap: 5px; left: 0px; top: 50%; transform: translateY(-50%); transition: left 0.1s linear; }
-  .duckContainer .duck { font-size: 28px; transform: scaleX(-1); animation: swim 0.8s ease-in-out infinite alternate; position: relative; z-index: 2; }
+  .duckContainer { position: absolute; display: flex; align-items: center; gap: 5px; transition: left 0.1s linear; }
+  .duck { font-size: 28px; transform: scaleX(-1); animation: swim 0.8s ease-in-out infinite alternate; position: relative; z-index: 2; }
   @keyframes swim { 0% { transform: translateY(0px) scaleX(-1); } 100% { transform: translateY(-4px) scaleX(-1); } }
   .finish-line { position: absolute; right: 0; top: 0; height: 100%; width: 5px; background: red; }
 
-  /* Splash trail */
   .splash { position: absolute; font-size: 18px; opacity: 0.7; pointer-events: none; animation: fade 0.5s linear forwards; z-index: 1; }
   @keyframes fade { 0% { opacity: 0.7; transform: translateY(0) scale(1); } 100% { opacity: 0; transform: translateY(-10px) scale(0.5); } }
 
@@ -31,9 +30,12 @@
   #coinContainer { margin-top:20px; font-size:50px; display:inline-block; transform-style: preserve-3d; }
   @keyframes spin { 0% { transform: rotateY(0deg); } 100% { transform: rotateY(1080deg); } }
   .spin { animation: spin 2s ease-in-out; }
+
+  footer { margin-top: 30px; padding: 10px; background: #111827; color: white; font-size: 14px; }
 </style>
 </head>
 <body>
+
 <header>
   <h1>🎲 Foxseiz Roll Hub 🎲</h1>
   <nav>
@@ -43,7 +45,7 @@
   </nav>
 </header>
 
-<!-- Dice Roller -->
+<!-- Dice -->
 <section id="dice" class="active">
   <h2>Dice Roller 🎲</h2>
   <button class="action" onclick="rollDice(6)">Roll a d6</button>
@@ -54,7 +56,7 @@
   <div class="result" id="diceResult"></div>
 </section>
 
-<!-- Coin Flip -->
+<!-- Coin -->
 <section id="coin">
   <h2>Coin Flip 🪙</h2>
   <button class="action" onclick="flipCoin()">Flip Coin</button>
@@ -74,134 +76,139 @@
   <div class="result" id="duckResult"></div>
 </section>
 
+<footer>Roll Hub Version 1.2</footer>
+
 <script>
-  // Navigation
-  function showTab(tab) {
-    document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
-    document.querySelectorAll('nav button').forEach(btn => btn.classList.remove('active'));
-    document.getElementById(tab).classList.add('active');
-    document.getElementById(tab+'Tab').classList.add('active');
-  }
+function showTab(tab){
+  document.querySelectorAll('section').forEach(s=>s.classList.remove('active'));
+  document.querySelectorAll('nav button').forEach(b=>b.classList.remove('active'));
+  document.getElementById(tab).classList.add('active');
+  document.getElementById(tab+'Tab').classList.add('active');
+}
 
-  // Dice
-  function rollDice(sides) {
-    const roll = Math.floor(Math.random()*sides)+1;
-    document.getElementById("diceResult").innerText = `You rolled: ${roll}`;
-  }
-  function rollCustomDice() {
-    const sides = parseInt(document.getElementById("customSides").value);
-    if(isNaN(sides)||sides<2){document.getElementById("diceResult").innerText="Enter valid sides (min 2)";return;}
-    rollDice(sides);
-  }
+// Dice
+function rollDice(s){ document.getElementById("diceResult").innerText=`You rolled: ${Math.floor(Math.random()*s)+1}`; }
+function rollCustomDice(){
+  const s=parseInt(document.getElementById("customSides").value);
+  if(isNaN(s)||s<2){document.getElementById("diceResult").innerText="Enter valid sides (min 2)"; return;}
+  rollDice(s);
+}
 
-  // Coin Flip
-  function flipCoin(){
-    const container=document.getElementById("coinContainer");
-    const result=document.getElementById("coinResult");
-    result.innerText="";
-    container.classList.add("spin");
-    setTimeout(()=>{
-      container.classList.remove("spin");
-      const flip=Math.random()<0.5?"Heads":"Tails";
-      container.innerText=flip==="Heads"?"🪙":"🪙";
-      result.innerText=`Coin landed on: ${flip}`;
-    },2000);
-  }
+// Coin
+function flipCoin(){
+  const container=document.getElementById("coinContainer");
+  const result=document.getElementById("coinResult");
+  result.innerText="";
+  container.classList.add("spin");
+  setTimeout(()=>{
+    container.classList.remove("spin");
+    const flip=Math.random()<0.5?"Heads":"Tails";
+    container.innerText="🪙";
+    result.innerText=`Coin landed on: ${flip}`;
+  },2000);
+}
 
-  // Duck Race
-  const duckColors=["#f87171","#facc15","#34d399","#60a5fa","#a78bfa","#fb923c","#f472b6","#4ade80"];
-  function getRandomColor(){return duckColors[Math.floor(Math.random()*duckColors.length)];}
+// Duck Race
+const duckColors=["#f87171","#facc15","#34d399","#60a5fa","#a78bfa","#fb923c","#f472b6","#4ade80"];
+function getRandomColor(){ return duckColors[Math.floor(Math.random()*duckColors.length)]; }
 
-  function updateDuckPreview(){
-    const input=document.getElementById("names").value;
-    const players=input.split(",").map(p=>p.trim()).filter(Boolean);
-    const track=document.getElementById("raceTrack");
-    track.innerHTML="";
-    if(players.length===0) return;
+function updateDuckPreview(){
+  const input=document.getElementById("names").value;
+  const players=input.split(",").map(p=>p.trim()).filter(Boolean);
+  const track=document.getElementById("raceTrack");
+  track.innerHTML="";
+  const displayPlayers=players.length>=2?players:["Player 1","Player 2"];
 
-    const finishLine=document.createElement("div"); finishLine.className="finish-line"; track.appendChild(finishLine);
+  const finishLine=document.createElement("div");
+  finishLine.className="finish-line";
+  track.appendChild(finishLine);
 
-    players.forEach(player=>{
-      const lane=document.createElement("div"); lane.className="lane";
+  displayPlayers.forEach(player=>{
+    const lane=document.createElement("div");
+    lane.className="lane";
 
-      const nameDiv=document.createElement("div");
-      nameDiv.innerText=player;
-      nameDiv.style.color=getRandomColor();
-      nameDiv.style.fontWeight="bold";
-      nameDiv.style.position="absolute";
-      nameDiv.style.left="-10px"; 
-      nameDiv.style.whiteSpace="nowrap";
+    const nameDiv=document.createElement("div");
+    nameDiv.innerText=player;
+    nameDiv.style.color=getRandomColor();
+    nameDiv.style.fontWeight="bold";
+    nameDiv.style.position="absolute";
+    nameDiv.style.left="-150px";
+    nameDiv.style.whiteSpace="nowrap";
 
-      const duck=document.createElement("div");
-      duck.innerText="🦆";
-      duck.style.fontSize="28px";
-      duck.style.position="absolute";
-      duck.style.left="0px"; 
-      duck.style.top="50%";
-      duck.style.transform="translateY(-50%) scaleX(-1)";
-      duck.style.transition="left 0.1s linear";
-      duck.className="duck";
+    const duck=document.createElement("div");
+    duck.innerText="🦆";
+    duck.style.fontSize="28px";
+    duck.style.position="absolute";
+    duck.style.left="0px";
+    duck.style.top="50%";
+    duck.style.transform="translateY(-50%) scaleX(-1)";
+    duck.style.transition="left 0.1s linear";
+    duck.className="duck";
 
-      lane.appendChild(nameDiv);
-      lane.appendChild(duck);
-      track.appendChild(lane);
+    lane.appendChild(nameDiv);
+    lane.appendChild(duck);
+    track.appendChild(lane);
+  });
+}
+document.getElementById("names").addEventListener("input", updateDuckPreview);
+
+// Start Race
+function startTimedDuckRace(){
+  const input=document.getElementById("names").value;
+  const players=input.split(",").map(p=>p.trim()).filter(Boolean);
+  const displayPlayers=players.length>=2?players:["Player 1","Player 2"];
+  const duration=parseFloat(document.getElementById("raceDuration").value);
+  if(isNaN(duration)||duration<=0){document.getElementById("duckResult").innerText="Enter valid duration!"; return;}
+
+  const track=document.getElementById("raceTrack");
+  const lanes=track.querySelectorAll(".lane");
+  const trackWidth=600, finishLineWidth=5;
+  const baseSpeed=(trackWidth-finishLineWidth-40)/(duration*30);
+  const speeds=displayPlayers.map(()=>0.8+Math.random()*0.4);
+
+  let tick=0, totalTicks=duration*30;
+
+  const raceInterval=setInterval(()=>{
+    let finished=false;
+    lanes.forEach((lane,i)=>{
+      const duck=lane.querySelector(".duck");
+      let left=parseFloat(duck.style.left)||0;
+      const twist=(Math.random()-0.5)*3;
+      const newLeft=Math.min(left+baseSpeed*speeds[i]+twist,trackWidth-finishLineWidth-40);
+      duck.style.left=newLeft+"px";
+
+      // Splash
+      const splash=document.createElement("div");
+      splash.className="splash";
+      splash.style.left=newLeft+"px";
+      splash.style.top="50%";
+      splash.innerText="💦";
+      lane.appendChild(splash);
+      setTimeout(()=>splash.remove(),500);
+
+      if(newLeft>=trackWidth-finishLineWidth-40&&!finished){
+        finished=true;
+        clearInterval(raceInterval);
+        document.getElementById("duckResult").innerText="🏆 Winner is: "+displayPlayers[i]+"!";
+      }
     });
-  }
-  document.getElementById("names").addEventListener("input", updateDuckPreview);
 
-  function startTimedDuckRace(){
-    const input=document.getElementById("names").value;
-    const players=input.split(",").map(p=>p.trim()).filter(Boolean);
-    const duration=parseFloat(document.getElementById("raceDuration").value);
-    if(players.length<2||isNaN(duration)||duration<=0){document.getElementById("duckResult").innerText="Add at least 2 names and valid duration!"; return;}
-
-    const track=document.getElementById("raceTrack");
-    const lanes=track.querySelectorAll(".lane");
-    const trackWidth=600, finishLineWidth=5;
-    const baseSpeed=(trackWidth-finishLineWidth-40)/(duration*30);
-    const speeds=Array(players.length).fill().map(()=>0.8+Math.random()*0.4);
-
-    let tick=0, totalTicks=duration*30;
-    const raceInterval=setInterval(()=>{
-      let finished=false;
+    tick++;
+    if(tick>=totalTicks&&!finished){
+      let max=0, winner=0;
       lanes.forEach((lane,i)=>{
         const duck=lane.querySelector(".duck");
-        let left=parseFloat(duck.style.left)||0;
-        const twist=(Math.random()-0.5)*3;
-        const newLeft=Math.min(left+baseSpeed*speeds[i]+twist,trackWidth-finishLineWidth-40);
-        duck.style.left=newLeft+"px";
-
-        // Splash effect
-        const splash=document.createElement("div");
-        splash.className="splash";
-        splash.style.left=newLeft+"px";
-        splash.style.top="50%";
-        splash.innerText="💦";
-        lane.appendChild(splash);
-        setTimeout(()=>splash.remove(),500);
-
-        if(newLeft>=trackWidth-finishLineWidth-40&&!finished){
-          finished=true; clearInterval(raceInterval);
-          document.getElementById("duckResult").innerText="🏆 Winner is: "+players[i]+"!";
-        }
+        const l=parseFloat(duck.style.left);
+        if(l>max){max=l; winner=i;}
       });
+      document.getElementById("duckResult").innerText="🏆 Winner is: "+displayPlayers[winner]+"!";
+      clearInterval(raceInterval);
+    }
+  },1000/30);
+}
 
-      tick++;
-      if(tick>=totalTicks&&!finished){
-        let max=0,winner=0;
-        lanes.forEach((lane,i)=>{
-          const duck=lane.querySelector(".duck");
-          const l=parseFloat(duck.style.left);
-          if(l>max){max=l; winner=i;}
-        });
-        document.getElementById("duckResult").innerText="🏆 Winner is: "+players[winner]+"!";
-        clearInterval(raceInterval);
-      }
-    },1000/30);
-  }
-
-  // Initialize preview
-  updateDuckPreview();
+// Initialize preview
+updateDuckPreview();
 </script>
 </body>
 </html>
